# annie-mei

./: .coderabbit.yaml  .deepsource.toml  .env.example  .gitignore  .pre-commit-config.yaml  AGENTS.md  CLAUDE.md  Cargo.toml  Dockerfile  PRIVACY_POLICY.md  README.md  TERMS_OF_SERVICE.md  bacon.toml  docker-compose.yaml  opencode.jsonc  rust-toolchain.toml  slate.json  slate.jsonc  techstack.md  techstack.yml  trufflehog.yaml
.cargo/: config.toml
.claude/: settings.json
.claude/commands/: create-release.md
.cursor/rules/: annie-mei.mdc
.devcontainer/: devcontainer.json  docker-compose.yml
.entire/: settings.json
.factory/: settings.json
.github/: PULL_REQUEST_TEMPLATE.md  dependabot.yml
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md
.github/workflows/: CI.yml  build-beta.yml  build-release.yml  build.yml  cargo-build.yml  cargo-test.yml  dependabot-version-bump-apply.yml  dependabot-version-bump-check.yml  rust-clippy.yml  sentry-debug-symbols.yml
.opencode/plugins/: entire.ts
.opencode/skills/create-release/: SKILL.md
37/dbfa0fd199/: metadata.json
37/dbfa0fd199/0/: context.md  metadata.json
4e/59727f316d/: metadata.json
4e/59727f316d/0/: metadata.json
5f/71fff4bb5e/: metadata.json
5f/71fff4bb5e/0/: full.jsonl  metadata.json
ac/60a47200f0/: metadata.json
ac/60a47200f0/0/: content_hash.txt  metadata.json
ca/181079f2e4/: metadata.json
ca/181079f2e4/0/: metadata.json  prompt.txt
docs/: database-schemas.md  oauth-contract.md
migrations/: 20260516000001_create_settings_tables.down.sql  20260516000001_create_settings_tables.up.sql
migrations/2023-01-22-200806_create_users/: up.sql
migrations/2023-02-02-075156_remove_unique_constraint_from_user/: down.sql  up.sql
migrations/2023-02-02-080943_users_add_index_discord_id_anilist_id/: down.sql  up.sql
migrations/2023-04-15-225407_add_access_token_to_users/: down.sql  up.sql
migrations/2023-04-15-230034_users_add_index_discord_id_access_token/: down.sql  up.sql
migrations/2026-05-02-000001_drop_users_table/: down.sql  up.sql
migrations/2026-05-16-000001_create_settings_tables/: down.sql  up.sql
migrations/2026-05-17-000001_move_settings_to_annie_mei_schema/: down.sql  up.sql
src/: lib.rs  main.rs  schema.rs  server.rs
src/commands/: help.rs  input_validation.rs  mod.rs  ping.rs  response.rs  settings.rs  traits.rs  unregister.rs  whoami.rs
src/commands/anime/: anime.rs  command.rs  fetcher.rs  mod.rs  model.rs  queries.rs
src/commands/anime/fetchers/: fetch_by_id.rs  fetch_by_name.rs  mod.rs  queries.rs
src/commands/character/: command.rs  queries.rs
src/commands/manga/: command.rs  queries.rs
src/commands/recommend/: command.rs  mod.rs  queries.rs
src/commands/register/: command.rs
src/commands/search/: command.rs  mod.rs  prompts.rs  tests.rs
src/commands/settings/: command.rs  mod.rs
src/commands/songs/: command.rs  fetcher.rs  mod.rs
src/models/: anilist_anime.rs  anilist_character.rs  anilist_common.rs  anilist_manga.rs  anilist_recommendation.rs  anime.rs  anime_id_response.rs  character_id_response.rs  character_response.rs  fetch.rs  fetcher.rs  id_response.rs  mal_response.rs  manga_id_response.rs  media_list_anime_response.rs  media_list_manga_response.rs  media_list_response.rs  media_response.rs  media_type.rs  mod.rs  settings.rs  transformers.rs  user_media_list.rs
src/models/db/: mod.rs  oauth_credential.rs  settings.rs  user.rs
src/utils/: ai.rs  anilist.rs  anilist_request.rs  channel.rs  database.rs  fetch_by_arguments.rs  formatter.rs  fuzzy.rs  guild.rs  llm.rs  message.rs  mod.rs  my_anime_list_request.rs  oauth.rs  posthog.rs  privacy.rs  queries.rs  redis.rs  response_fetcher.rs  score.rs  settings.rs  spotify.rs  statics.rs  tls.rs
src/utils/fetchers/: fetch_by_arguments.rs  mod.rs
src/utils/llm/: mod.rs  tests.rs
src/utils/oauth/: mod.rs  tests.rs
src/utils/posthog/: tests.rs
src/utils/privacy/: mod.rs  tests.rs
src/utils/requests/: anilist.rs  mangadex.rs  mod.rs  my_anime_list.rs
