[package]
name = "annie-mei"
version = "2.1.0"
edition = "2024"
license = "GPL-3.0-or-later"
rust-version = "1.92"

[profile.dev]
split-debuginfo = "unpacked"

[profile.release]
lto = true
codegen-units = 1

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
blake3 = "1.8"
chrono = "0.4.43"
clap = { version = "4", features = ["derive"] }
diesel = { version = "2.2.12", features = ["postgres"] }
diesel_migrations = "2.2.0"
env_logger = "0.11.8"
futures = "0.3.31"
html2md = "0.2.15"
linkify = "0.10"
log = "0.4.29"
ngrammatic = "0.7.0"
openssl = { version = "0.10.75", features = ["vendored"] }
reqwest = { version = "0.13.2", features = ["blocking", "rustls"] }
redis = { version = "1.0.3", features = ["tls-native-tls"] }
rspotify = { version = "0.15.3", default-features = false, features = [
  "client-ureq",
  "ureq-rustls-tls",
] }
sentry = { version = "0.46.0", features = ["tracing"] }
serde = "1.0.228"
serde_json = "1.0.149"
serenity = "0.12"
strum = { version = "0.27.2", features = ["derive"] }
titlecase = "3.6.0"
tokio = { version = "1.49.0", features = ["full"] }
tracing = "0.1.44"
tracing-subscriber = { version = "0.3.22", features = ["env-filter"] }
url = "2.5"
wana_kana = "4.0.0"
