[package]
name = "annie-mei"
version = "2.11.9"
edition = "2024"
license = "GPL-3.0-or-later"
rust-version = "1.94"

[profile.dev]
split-debuginfo = "unpacked"

[profile.release]
lto = true
codegen-units = 1
debug = 2
split-debuginfo = "packed"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
axum = "0.8"
base64 = "0.22"
blake3 = "1.8"
chrono = "0.4.44"
clap = { version = "4", features = ["derive"] }
diesel = { version = "2.3.7", features = ["postgres", "r2d2"] }
diesel_migrations = "2.3.1"
env_logger = "0.11.10"
futures = "0.3.32"
hmac = "0.13"
html2md = "0.2.15"
linkify = "0.11"
log = "0.4.29"
ngrammatic = "0.7.0"
openssl = { version = "0.10.78", features = ["vendored"] }
reqwest = { version = "0.13.2", features = ["rustls"] }
redis = { version = "1.2.0", features = ["tls-native-tls"] }
rspotify = { version = "0.16.0", default-features = false, features = [
  "client-ureq",
  "ureq-rustls-tls",
] }
sentry = { version = "0.47.0", features = ["tracing", "logs"] }
serde = "1.0.228"
serde_json = "1.0.149"
serenity = "0.12"
sha2 = "0.11"
strum = { version = "0.28.0", features = ["derive"] }
titlecase = "3.6.0"
tokio = { version = "1.52.1", features = ["full"] }
tracing = "0.1.44"
tracing-subscriber = { version = "0.3.23", features = ["env-filter"] }
url = "2.5"
wana_kana = "4.0.0"
