[package]
name = "annie-mei"
version = "3.0.0"
edition = "2024"
license = "GPL-3.0-or-later"
rust-version = "1.95"

[profile.dev]
split-debuginfo = "unpacked"

[profile.release]
lto = true
codegen-units = 1
debug = 2
split-debuginfo = "packed"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
base64 = "0.22"
blake3 = "1.8.5"
chrono = "0.4.44"
clap = { version = "4", features = ["derive"] }
sqlx = { version = "0.8", default-features = false, features = ["runtime-tokio", "postgres", "chrono", "macros", "tls-rustls"] }
getrandom = "0.4"
hmac = "0.13"
html2md = "0.2.15"
linkify = "0.11"
ngrammatic = "0.7.0"
reqwest = { version = "0.13.3", default-features = false, features = ["http2", "rustls-no-provider"] }
redis = { version = "1.2.1", features = ["tls-rustls"] }
rspotify = { version = "0.16.1", default-features = false, features = [
  "client-ureq",
  "ureq-rustls-tls",
] }
rustls = { version = "0.23", default-features = false, features = ["ring", "std", "tls12"] }
sentry = { version = "0.48.2", default-features = false, features = [
  "backtrace",
  "contexts",
  "debug-images",
  "logs",
  "panic",
  "release-health",
  "rustls",
  "tracing",
  "ureq",
] }
serde = "1.0.228"
serde_json = "1.0.149"
serenity = { version = "0.12", default-features = false, features = [
  "cache",
  "client",
  "gateway",
  "model",
  "rustls_backend",
] }
sha2 = "0.11"
strum = { version = "0.28.0", features = ["derive"] }
titlecase = "3.6.0"
tokio = { version = "1.52.3", features = ["full"] }
tracing = "0.1.44"
tracing-subscriber = { version = "0.3.23", features = ["env-filter"] }
url = "2.5"
uuid = { version = "1", features = ["v4"] }
wana_kana = "5.0.0"
